<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="my_nano_program">My Nano Degree Apps</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>

















</resources>
