<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivity"
    android:addStatesFromChildren="false"
    android:gravity="center_vertical|fill_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/my_nano_program"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
       android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center_horizontal" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/spotify_streamer"
            android:id="@+id/button"
            android:background="#F08C35"
            android:clickable="true"
            android:onClick="spotify_streamer"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/scores"
            android:id="@+id/button2"
            android:background="#F08C35"
            android:onClick="scores_app"
            android:layout_below="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/library"
            android:id="@+id/button3"
            android:layout_gravity="right"
            android:background="#F08C35"
            android:onClick="library_app"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/build_it_bigger"
            android:id="@+id/button4"
            android:background="#F08C35"
            android:onClick="build_it"
            android:layout_below="@+id/button3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/xyz_reader"
            android:id="@+id/button5"
            android:background="#F08C35"
            android:onClick="xyz_reader"
            android:layout_above="@+id/button6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/capstone"
            android:id="@+id/button6"
            android:background="#7a35f0"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="capstone"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"/>

</LinearLayout>
